input field and such

--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
 		My Shopping List
 	</header>
 	<div id="content">
-		tets
+		<form action="">
+			<input id="additem" type="text" name="additem" value="Add New Item">
+			<input type="submit" value="Add">
+		</form>
+
+		<!--Soon to be replaced with User Input-->
+		<ul>
+			<li>Almond Milk</li>
+			<li>Rice</li>
+			<li>Hand Towels</li>
+			<li>Radishes</li>
+			<li>Sunflower seeds</li>
+		</ul>
+
 	</div>
-	<footer>
-		
-	</footer>
 </body>
 </html>
