static layout mostly finished

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 	<div id="content">
 		<form action="">
 			<input id="additem" type="text" name="additem" value="Add New Item">
-			<input type="submit" value="Add">
+			<input id="additem" type="submit" value="Add">
 		</form>
-
-		<!--Soon to be replaced with User Input-->
-		<ul>
-			<li>Almond Milk</li>
-			<li>Rice</li>
-			<li>Hand Towels</li>
-			<li>Radishes</li>
-			<li>Sunflower seeds</li>
-		</ul>
-
+		<div id="list">
+			<!--Soon to be replaced with User Input-->
+			<ul>
+				<li class="item"><img class="delete" src="images/trash.png" alt="delete"><span>Almond Milk</span></li>
+				<li class="item"><img class="delete" src="images/trash.png" alt="delete"><span>Rice</span></li>
+				<li class="item"><img class="delete" src="images/trash.png" alt="delete"><span>Radishes</span></li>
+				<li class="item"><img class="delete" src="images/trash.png" alt="delete"><span>Hand towels</span></li>
+				<li class="item"><img class="delete" src="images/trash.png" alt="delete"><span>Almond Milk</span></li>
+			</ul>		
+		</div>
 	</div>
 </body>
 </html>
